自动压缩图url片添加了base64位加密

--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,8 +1,8 @@
 #mysql
 driver=com.mysql.jdbc.Driver
-#url=jdbc:mysql://120.27.225.198:3306/upload?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
-#username=root
-#password=njlime2017
-url=jdbc:mysql://127.0.0.1:3306/upload?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+url=jdbc:mysql://120.27.225.198:3306/upload?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
 username=root
-password=root
+password=njlime2017
+#url=jdbc:mysql://127.0.0.1:3306/upload?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+#username=root
+#password=root
