修正了没有使用的elfinder需要数据库的问题

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -51,7 +51,7 @@
 
 	<filter>
 		<filter-name>CorsFilter</filter-name>
-		<filter-class>com.web.helper.CorsFilter</filter-class>
+		<filter-class>com.upload.helper.CorsFilter</filter-class>
 	</filter>
 	<filter-mapping>
 		<filter-name>CorsFilter</filter-name>
@@ -59,7 +59,7 @@
 	</filter-mapping>
 	
 	
-	<servlet>
+	<!--<servlet>
 	    <servlet-name>elfinder</servlet-name>
 	    <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 	    <init-param>
@@ -70,7 +70,7 @@
 	<servlet-mapping>
 	    <servlet-name>elfinder</servlet-name>
 	    <url-pattern>/elfinder/*</url-pattern>
-	</servlet-mapping>
+	</servlet-mapping>-->
 	
 	<welcome-file-list>
 		<welcome-file>index.jsp</welcome-file>
