分项目分单位存储

--- a/src/main/resources/property.properties
+++ b/src/main/resources/property.properties
@@ -3,7 +3,7 @@ debugMode=false
 #是否读取数据库
 isUseDatabase=true
 #不读取数据库时文件路径
-#resourcePath=D:\\pengxj\\resource
-resourcePath=/htdocs/files/base
+#resourcePath=E:\\htdocs\\images
+resourcePath=/htdocs/files
 #自动生成图片文件的文件夹名称后缀
 thumb = thumb
