--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,5 +1,5 @@
 #mysql
-driver=com.mysql.jdbc.Driver
+#driver=com.mysql.jdbc.Driver
 #url=jdbc:mysql://120.27.225.198:3306/upload?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
 #username=root
 #password=njlime2017
